Implement the HDL lowering of the decode tree node