@@ -29,6 +29,7 @@ import vadl.rtl.ipg.InstructionProgressGraph;
 import vadl.rtl.ipg.nodes.RtlConditionalReadNode;
 import vadl.rtl.ipg.nodes.RtlDecodeTreeNode;
 import vadl.rtl.ipg.nodes.RtlInstructionWordSliceNode;
+import vadl.rtl.ipg.nodes.RtlInvalidInstructionNode;
 import vadl.rtl.ipg.nodes.RtlIsInstructionNode;
 import vadl.rtl.ipg.nodes.RtlOneHotDecodeNode;
 import vadl.rtl.ipg.nodes.RtlSelectByInstructionNode;
@@ -75,15 +76,8 @@ public class InstructionProgressGraphLowerPass extends Pass {
 
     var decodeContext = mapping.ensureDecode();
 
-    // TODO: Introduce a 'vdt' node, which considers the 'RtlIsInstructionNode'
-    //  and 'RtlOneHotDecodeNode' as 'signals' to output.
-    //  Add the instruction word as input to the 'vdt' node
-
     var vdtDecodeNode = new RtlDecodeTreeNode();
 
-    // TODO: In reality the insn context of the decode node should be isa.ownInstruction(), however
-    // then the ipg.fetch() node doesn't depend on 'all' possible instructions anymore and receives
-    // an IsInstruction condition, which leads to a circular dependency...
     ipg.add(vdtDecodeNode, ipg.instructions());
     decodeContext.ipgNodes().add(vdtDecodeNode);
 
@@ -102,16 +96,16 @@ public class InstructionProgressGraphLowerPass extends Pass {
     ipg.getNodes(RtlSelectByInstructionNode.class).forEach(select -> {
 
       if (select.selection() != null) {
-        // TODO: Is that even a viable path?
         return;
       }
 
       // Generate expression that selects output based on sets of instructions
       var instructions = ipg.getContext(select).instructions();
 
-      var oneHotType = UIntType.minimalTypeFor(select.instructions().size() - 1);
-      // TODO: Maybe we wan't to attach the selection's instructions to the oneHot
-      var selection = ipg.add(new RtlOneHotDecodeNode(oneHotType, vdtDecodeNode), instructions);
+      var oneHotType = UIntType.minimalTypeFor(select.instructions().size() - 1L);
+      var selection =
+          ipg.add(new RtlOneHotDecodeNode(oneHotType, select.instructions(), vdtDecodeNode),
+              instructions);
 
       vdtDecodeNode.addSignal(selection);
 
@@ -122,22 +116,14 @@ public class InstructionProgressGraphLowerPass extends Pass {
       decodeContext.ipgNodes().add(selection);
     });
 
-    // handle undefined instructions
-    // TODO undefined instruction behavior from specification
-    var anyIns = ipg.add(
-        new RtlIsInstructionNode(isa.ownInstructions(), vdtDecodeNode),
+    // handle invalid instructions
+    var invalidInsn = ipg.add(
+        new RtlInvalidInstructionNode(vdtDecodeNode),
         isa.ownInstructions()
     );
-    decodeContext.ipgNodes().add(anyIns);
-
-    // TODO: Create a negated version of the IsInstructionNod (or even a dedicated node)
-    //var invalidInsn = ipg.add(GraphUtils.not(anyIns), isa.ownInstructions());
-    //decodeContext.ipgNodes().add(anyIns);
-
-    vdtDecodeNode.addSignal(anyIns);
-
-    // TODO: Do we still need this?
-    ipg.setUnknownInstruction(anyIns);
+    decodeContext.ipgNodes().add(invalidInsn);
+    vdtDecodeNode.addSignal(invalidInsn);
+    ipg.setUnknownInstruction(invalidInsn);
 
     // optimize
     new RtlSimplifier(RtlSimplificationRules.rules).run(ipg, mapping);
@@ -162,30 +148,33 @@ public class InstructionProgressGraphLowerPass extends Pass {
                                     InstructionProgressGraph ipg, MiaMapping mapping) {
     node.ensure(cond != null, "Condition input must be set before we extend it");
     var instructions = ipg.getContext(node).instructions();
-    if (!instructions.containsAll(ipg.instructions())) { // TODO: What's this check for exactly; are we aware that we're processing the instruction word fetch here, too?
-      // determine mapping context for existing condition
-      var condContext = mapping.ensureContext(cond);
-      if (cond.isConstant()) {
-        condContext = mapping.ensureDecode();
-      }
 
-      var isIns = ipg.add(new RtlIsInstructionNode(instructions, decodeTree), instructions);
-      decodeTree.addSignal(isIns);
-
-      // if not active in all instructions, patch condition
-      var newCond = ipg.add(GraphUtils.and(cond, isIns), instructions);
-      node.replaceInput(cond, newCond);
-
-      // add MiA mapping
-      var decodeContext = mapping.ensureDecode();
-      decodeContext.ipgNodes().add(isIns);
-      // TODO: What if condContext < decodeContext? Then the newCond is mapped to the e.g. FETCH
-      //       stage, while it's data dependency (isInsn) is only present in a later stage.
-      condContext.ipgNodes().add(newCond);
-
-      return List.of(isIns, newCond);
+    if (instructions.containsAll(ipg.instructions())) {
+      return Collections.emptyList();
     }
-    return Collections.emptyList();
+
+    // determine mapping context for existing condition
+    var condContext = mapping.ensureContext(cond);
+    if (cond.isConstant()) {
+      condContext = mapping.ensureDecode();
+    }
+
+    var isIns = ipg.add(new RtlIsInstructionNode(instructions, decodeTree), instructions);
+    decodeTree.addSignal(isIns);
+
+    // if not active in all instructions, patch condition
+    var newCond = ipg.add(GraphUtils.and(cond, isIns), instructions);
+    node.replaceInput(cond, newCond);
+
+    // add MiA mapping
+    var decodeContext = mapping.ensureDecode();
+    decodeContext.ipgNodes().add(isIns);
+
+    // TODO: What if condContext < decodeContext? Then the newCond is mapped to the e.g. FETCH
+    //       stage, while it's data dependency (isInsn) is only present in a later stage.
+    condContext.ipgNodes().add(newCond);
+
+    return List.of(isIns, newCond);
   }
 
 }
